src/azure-c.h

// FIXME: This stuff is copy pasted from the azure headers

typedef void* AzGradientStopsRef;
typedef void* AzDrawTargetRef;
typedef void* AzPatternRef;
typedef void* AzScaledFontRef;
typedef void* AzGlyphRenderingOptionsRef;
typedef void* AzSourceSurfaceRef;
typedef void* AzDrawSurfaceOptionsRef;
typedef void* AzDataSourceSurfaceRef;
typedef void* AzPathBuilderRef;
typedef void* AzPathRef;
typedef void* AzLinearGradientPatternRef;
/* Types.h */

typedef float AzFloat;
enum AzSurfaceFormat
{
  AZ_FORMAT_B8G8R8A8,
  AZ_FORMAT_B8G8R8X8,
  AZ_FORMAT_R8G8B8A8,
  AZ_FORMAT_R8G8B8X8,
  AZ_FORMAT_R5G6B5,
  AZ_FORMAT_A8,
  AZ_FORMAT_YUV,
  AZ_FORMAT_UNKNOWN
};
enum AzBackendType
{
  AZ_BACKEND_NONE,
  AZ_BACKEND_DIRECT2D,
  AZ_BACKEND_COREGRAPHICS,
  AZ_BACKEND_COREGRAPHICS_ACCELERATED,
  AZ_BACKEND_CAIRO,
  AZ_BACKEND_SKIA,
  AZ_BACKEND_RECORDING,
  AZ_BACKEND_DIRECT2D1_1,
  AZ_BACKEND_NVPR
};
enum AzNativeFontType
{
  AZ_NATIVE_FONT_DWRITE_FONT_FACE,
  AZ_NATIVE_FONT_GDI_FONT_FACE,
  AZ_NATIVE_FONT_MAC_FONT_FACE,
  AZ_NATIVE_FONT_SKIA_FONT_FACE,
  AZ_NATIVE_FONT_CAIRO_FONT_FACE,
  AZ_NATIVE_FONT_NVPR_FONT_FACE
};
enum AzFontStyle
{
  AZ_FONT_STYLE_NORMAL,
  AZ_FONT_STYLE_ITALIC,
  AZ_FONT_STYLE_BOLD,
  AZ_FONT_STYLE_BOLD_ITALIC
};
enum AzCompositionOp {
  AZ_OP_OVER,
  AZ_OP_ADD,
  AZ_OP_ATOP,
  AZ_OP_OUT,
  AZ_OP_IN,
  AZ_OP_SOURCE,
  AZ_OP_DEST_IN,
  AZ_OP_DEST_OUT,
  AZ_OP_DEST_OVER,
  AZ_OP_DEST_ATOP,
  AZ_OP_XOR,
  AZ_OP_MULTIPLY,
  AZ_OP_SCREEN,
  AZ_OP_OVERLAY,
  AZ_OP_DARKEN,
  AZ_OP_LIGHTEN,
  AZ_OP_COLOR_DODGE,
  AZ_OP_COLOR_BURN,
  AZ_OP_HARD_LIGHT,
  AZ_OP_SOFT_LIGHT,
  AZ_OP_DIFFERENCE,
  AZ_OP_EXCLUSION,
  AZ_OP_HUE,
  AZ_OP_SATURATION,
  AZ_OP_COLOR,
  AZ_OP_LUMINOSITY,
  AZ_OP_COUNT
};
enum AzExtendMode {
  AZ_EXTEND_CLAMP,
  AZ_EXTEND_REPEAT,
  AZ_EXTEND_REFLECT
};
typedef struct _AzColor {
    AzFloat r, g, b, a;
} AzColor;
typedef struct _AzGradientStop {
    AzFloat offset;
    AzColor color;
} AzGradientStop;
typedef struct _AzRect {
    AzFloat x, y, width, height;
} AzRect;
typedef struct _AzPoint {
  AzFloat x, y;
} AzPoint;
typedef struct _AzIntSize {
  int32_t width, height;
} AzIntSize;
/* Matrix.h */

typedef struct _AzMatrix {
  AzFloat _11, _12;
  AzFloat _21, _22;
  AzFloat _31, _32;
} AzMatrix;
/* 2D.h */

// FIXME: rust-bindgen can't handle bitfields
typedef struct _AzDrawOptions {
  AzFloat mAlpha;
  uint16_t fields;
  /*
  enum AzCompositionOp mCompositionOp : 8;
  enum AzAntialiasMode mAntialiasMode : 2;
  */
} AzDrawOptions;
// FIXME: Again, bitfields
typedef struct _AzStrokeOptions {
  AzFloat mLineWidth;
  AzFloat mMiterLimit;
  const AzFloat* mDashPattern;
  size_t mDashLength;
  AzFloat mDashOffset;
  uint8_t fields;
  /*
    enum AzJoinStyle mLineJoin : 4;
    enum AzCapStyle mLineCap : 3;
   */
} AzStrokeOptions;
typedef struct _AzGlyph {
  uint32_t mIndex;
  AzPoint mPosition;
} AzGlyph;
typedef struct _AzGlyphBuffer {
  const AzGlyph *mGlyphs;
  uint32_t mNumGlyphs;
} AzGlyphBuffer;
typedef struct _AzNativeFont {
  enum AzNativeFontType mType;
  void *mFont;
} AzNativeFont;
AzDrawTargetRef AzCreateDrawTargetForData(AzBackendType aBackend,
                                          unsigned char *aData,
                                          AzIntSize *aSize,
                                          int32_t aStride,
                                          AzSurfaceFormat aFormat);
void AzRetainDrawTarget(AzDrawTargetRef aTarget);
void AzReleaseDrawTarget(AzDrawTargetRef aTarget);
AzIntSize AzDrawTargetGetSize(AzDrawTargetRef aDrawTarget);
AzSurfaceFormat AzDrawTargetGetFormat(AzDrawTargetRef aDrawTarget);
void AzDrawTargetGetTransform(AzDrawTargetRef aDrawTarget, AzMatrix* aOutMatrix);
void AzDrawTargetFlush(AzDrawTargetRef aDrawTarget);
void AzDrawTargetClearRect(AzDrawTargetRef aDrawTarget, AzRect *aRect);
void AzDrawTargetFillRect(AzDrawTargetRef aDrawTarget,
                          AzRect* aRect,
                          AzPatternRef aPattern,
                          AzDrawOptions* aDrawOptions);
void AzDrawTargetStrokeRect(AzDrawTargetRef aDrawTarget,
                            AzRect *aRect,
                            AzPatternRef aPattern,
                            AzStrokeOptions *aStrokeOptions,
                            AzDrawOptions *aDrawOptions);
void AzDrawTargetStrokeLine(AzDrawTargetRef aDrawTarget,
                            AzPoint *aStart,
                            AzPoint *aEnd,
                            AzPatternRef aPattern,
                            AzStrokeOptions *aStrokeOptions,
                            AzDrawOptions *aDrawOptions);
void AzDrawTargetFillGlyphs(AzDrawTargetRef aDrawTarget,
                            AzScaledFontRef aFont,
                            AzGlyphBuffer *aGlyphBuffer,
                            AzPatternRef aPattern,
                            AzDrawOptions *aOptions,
                            AzGlyphRenderingOptionsRef aRenderingOptions);
void AzDrawTargetDrawSurface(AzDrawTargetRef aDrawTarget,
                             AzSourceSurfaceRef aSurface,
                             AzRect *aDest,
                             AzRect *aSource,
                             AzDrawSurfaceOptionsRef aSurfOptions,
                             AzDrawOptions *aOptions);
void AzDrawTargetDrawSurfaceWithShadow(AzDrawTargetRef aDrawTarget,
                                       AzSourceSurfaceRef aSurface,
                                       const AzPoint* aPoint,
                                       const AzColor* aColor,
                                       const AzPoint* aOffset,
                                       AzFloat aSigma,
                                       AzCompositionOp aOperator);
AzSourceSurfaceRef AzDrawTargetGetSnapshot(AzDrawTargetRef aDrawTarget);
AzSourceSurfaceRef AzDrawTargetCreateSourceSurfaceFromData(AzDrawTargetRef aDrawTarget,
                                                           const unsigned char *aData,
                                                           AzIntSize *aSize,
                                                           int32_t aStride,
                                                           AzSurfaceFormat aFormat);
AzDrawTargetRef AzDrawTargetCreateShadowDrawTarget(AzDrawTargetRef aDrawTarget,
                                                   const AzIntSize *aSize,
                                                   AzSurfaceFormat aFormat,
                                                   AzFloat aSigma);
AzGradientStopsRef AzDrawTargetCreateGradientStops(AzDrawTargetRef aDrawTarget,
                                                   AzGradientStop *aStops,
                                                   uint32_t aNumStops,
                                                   AzExtendMode aExtendMode);
void AzDrawTargetPushClip(AzDrawTargetRef aDrawTarget, AzPathRef aPath);
void AzDrawTargetPushClipRect(AzDrawTargetRef aDrawTarget, const AzRect *aRect);
void AzDrawTargetPopClip(AzDrawTargetRef aDrawTarget);
void AzReleaseSourceSurface(AzSourceSurfaceRef aSurface);
AzIntSize AzSourceSurfaceGetSize(AzSourceSurfaceRef aSurface);
AzSurfaceFormat AzSourceSurfaceGetFormat(AzSourceSurfaceRef aSurface);
AzDataSourceSurfaceRef AzSourceSurfaceGetDataSurface(AzSourceSurfaceRef aSurface);
uint8_t *AzDataSourceSurfaceGetData(AzDataSourceSurfaceRef aSurface);
int32_t AzDataSourceSurfaceGetStride(AzDataSourceSurfaceRef aSurface);
AzPathBuilderRef AzCreatePathBuilder(AzDrawTargetRef aDrawTarget);
void AzReleasePathBuilder(AzPathBuilderRef aPathBuilder);
void AzPathBuilderMoveTo(AzPathBuilderRef aPathBuilder, const AzPoint *aPoint);
void AzPathBuilderLineTo(AzPathBuilderRef aPathBuilder, const AzPoint *aPoint);
void AzPathBuilderArc(AzPathBuilderRef aPathBuilder,
                      const AzPoint *aOrigin,
                      AzFloat aRadius,
                      AzFloat aStartAngle,
                      AzFloat aEndAngle,
                      bool aAntiClockwise);
AzPathRef AzPathBuilderFinish(AzPathBuilderRef aPathBuilder);
AzLinearGradientPatternRef AzCreateLinearGradientPattern(const AzPoint *aBegin,
                                                         const AzPoint *aEnd,
                                                         AzGradientStopsRef aStops,
                                                         const AzMatrix *aMatrix);
void AzReleaseGradientStops(AzGradientStopsRef aStops);
/* Factory.h */

void AzReleaseScaledFont(AzScaledFontRef aFont);
/* Helpers */
typedef void AzFontOptions;
AzFontOptions* AzCreateFontOptionsForName(char *aName, AzFontStyle aStyle);
void AzDestroyFontOptions(AzFontOptions* aOptions);