src/azure.rs


pub fn AzCreateDrawTargetForData(aBackend: AzBackendType, aData: *mut c_uchar, aSize: *mut AzIntSize, aStride: i32, aFormat: AzSurfaceFormat) -> AzDrawTargetRef;

pub fn AzCreateSkiaDrawTargetForFBO(aGLContext: AzSkiaSharedGLContextRef, aSize: *mut AzIntSize, aFormat: AzSurfaceFormat) -> AzDrawTargetRef;

pub fn AzRetainDrawTarget(aTarget: AzDrawTargetRef);

pub fn AzReleaseDrawTarget(aTarget: AzDrawTargetRef);

pub fn AzDrawTargetGetSize(aDrawTarget: AzDrawTargetRef) -> AzIntSize;

pub fn AzDrawTargetGetFormat(aDrawTarget: AzDrawTargetRef) -> AzSurfaceFormat;

pub fn AzDrawTargetGetTransform(aDrawTarget: AzDrawTargetRef, aOutMatrix: *mut AzMatrix);

pub fn AzDrawTargetFlush(aDrawTarget: AzDrawTargetRef);

pub fn AzDrawTargetClearRect(aDrawTarget: AzDrawTargetRef, aRect: *mut AzRect);

pub fn AzDrawTargetFillRect(aDrawTarget: AzDrawTargetRef,
                            aRect: *mut AzRect,
                            aPattern: AzPatternRef,
                            aDrawOptions: *mut AzDrawOptions);

pub fn AzDrawTargetStrokeRect(aDrawTarget: AzDrawTargetRef, aRect: *mut AzRect, aPattern: AzPatternRef, aStrokeOptions: *mut AzStrokeOptions, aDrawOptions: *mut AzDrawOptions);

pub fn AzDrawTargetStrokeLine(aDrawTarget: AzDrawTargetRef, aStart: *mut AzPoint, aEnd: *mut AzPoint, aPattern: AzPatternRef, aStrokeOptions: *mut AzStrokeOptions, aDrawOptions: *mut AzDrawOptions);

pub fn AzDrawTargetFill(aDrawTarget: AzDrawTargetRef, aPath: AzPathRef, aPattern: AzPatternRef, aOptions: *mut AzDrawOptions);

pub fn AzDrawTargetPushClip(aDrawTarget: AzDrawTargetRef, aPath: AzPathRef);

pub fn AzDrawTargetPushClipRect(aDrawTarget: AzDrawTargetRef, aRect: *const AzRect);

pub fn AzDrawTargetPopClip(aDrawTarget: AzDrawTargetRef);

pub fn AzDrawTargetFillGlyphs(aDrawTarget: AzDrawTargetRef, aFont: AzScaledFontRef, aGlyphBuffer: *mut AzGlyphBuffer, aPattern: AzPatternRef, aOptions: *mut AzDrawOptions, aRenderingOptions: AzGlyphRenderingOptionsRef);

pub fn AzDrawTargetDrawSurface(aDrawTarget: AzDrawTargetRef, aSurface: AzSourceSurfaceRef, aDest: *mut AzRect, aSource: *mut AzRect, aSurfOptions: AzDrawSurfaceOptionsRef, aOptions: *mut AzDrawOptions);

pub fn AzDrawTargetDrawSurfaceWithShadow(aDrawTarget: AzDrawTargetRef,
                                         aSurface: AzSourceSurfaceRef,
                                         aDest: *const AzPoint,
                                         aColor: *const AzColor,
                                         aOffset: *const AzPoint,
                                         aSigma: AzFloat,
                                         aOperator: AzCompositionOp);

pub fn AzDrawTargetGetSnapshot(aDrawTarget: AzDrawTargetRef) -> AzSourceSurfaceRef;

pub fn AzDrawTargetCreateSourceSurfaceFromData(aDrawTarget: AzDrawTargetRef, aData: *const u8, aSize: *mut AzIntSize, aStride: i32, aFormat: AzSurfaceFormat) -> AzSourceSurfaceRef;

pub fn AzDrawTargetCreateSimilarDrawTarget(aDrawTarget: AzDrawTargetRef,
                                           aSize: *const AzIntSize,
                                           aFormat: AzSurfaceFormat)
                                           -> AzSourceSurfaceRef;

pub fn AzDrawTargetCreateShadowDrawTarget(aDrawTarget: AzDrawTargetRef,
                                          aSize: *const AzIntSize,
                                          aFormat: AzSurfaceFormat,
                                          aSigma: AzFloat)
                                          -> AzSourceSurfaceRef;

pub fn AzDrawTargetCreateGradientStops(aDrawTarget: AzDrawTargetRef,
                                       aStops: *const AzGradientStop,
                                       aNumStops: u32,
                                       aExtendMode: AzExtendMode)
                                       -> AzGradientStopsRef;

pub fn AzCreateLinearGradientPattern(aBegin: *const AzPoint,
                                     aEnd: *const AzPoint,
                                     aStops: AzGradientStopsRef,
                                     aMatrix: *const AzMatrix)
                                     -> AzLinearGradientPatternRef;

pub fn AzReleaseSourceSurface(aSurface: AzSourceSurfaceRef);

pub fn AzSourceSurfaceGetSize(aSurface: AzSourceSurfaceRef) -> AzIntSize;

pub fn AzSourceSurfaceGetFormat(aSurface: AzSourceSurfaceRef) -> AzSurfaceFormat;

pub fn AzSourceSurfaceGetDataSurface(aSurface: AzSourceSurfaceRef) -> AzDataSourceSurfaceRef;

pub fn AzDataSourceSurfaceGetData(aSurface: AzDataSourceSurfaceRef) -> *mut u8;

pub fn AzDataSourceSurfaceGetStride(aSurface: AzDataSourceSurfaceRef) -> i32;

pub fn AzCreateScaledFontForNativeFont(aNativeFont: *mut AzNativeFont, aSize: AzFloat) -> AzScaledFontRef;

pub fn AzCreateScaledFontForTrueTypeData(aFontData: *const u8, aFontDataSize: u32, aFaceIndex: u32, aGlyphSize: f32, aType: enum_AzFontType) -> AzScaledFontRef;

pub fn AzReleaseScaledFont(aFont: AzScaledFontRef);

pub fn AzDrawTargetSetTransform(aDrawTarget: AzDrawTargetRef, aTransform: *mut AzMatrix);

pub fn AzCreateFontOptionsForName(aName: *const c_char, aStyle: enum_AzFontStyle) -> *mut AzFontOptions;

pub fn AzDestroyFontOptions(aOptions: *mut AzFontOptions);

pub fn AzSkiaGetCurrentGLContext() -> AzGLContext;

pub fn AzCreatePathBuilder(aDrawTarget: AzDrawTargetRef) -> AzPathBuilderRef;

pub fn AzReleasePathBuilder(aPathBuilder: AzPathBuilderRef);

pub fn AzPathBuilderMoveTo(aPathBuilder: AzPathBuilderRef, aPoint: *mut AzPoint);

pub fn AzPathBuilderLineTo(aPathBuilder: AzPathBuilderRef, aPoint: *mut AzPoint);

pub fn AzPathBuilderArc(aPathBuilder: AzPathBuilderRef,
                        aOrigin: *const AzPoint,
                        aRadius: AzFloat,
                        aStartAngle: AzFloat,
                        aEndAngle: AzFloat,
                        aAntiClockwise: bool);

pub fn AzPathBuilderFinish(aPathBuilder: AzPathBuilderRef) -> AzPathRef;

pub fn AzReleasePath(aPath: AzPathRef);

pub fn AzReleaseGradientStops(aFont: AzScaledFontRef);

}
